<?xml version="1.0" encoding="utf-8"?>
    
        <TableLayout android:id="@+id/tableLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
            <TableRow android:id="@+id/tableRow1" android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_gravity="center_vertical|center|center_horizontal">
                <LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="fill_parent" android:minWidth="300px" android:minHeight="150px" android:background="@color/elewhite" android:layout_margin="5px">
                  <ImageView android:layout_width="wrap_content" android:src="@drawable/icon" android:layout_height="wrap_content" android:id="@+id/friendimage" android:layout_margin="5px" android:clickable="true" android:minWidth="100px" android:minHeight="100px"></ImageView>
    <TextView android:text="TextView" android:layout_width="wrap_content" android:id="@+id/friendstatus" android:layout_height="wrap_content" android:layout_margin="5px" android:layout_gravity="center_vertical" android:textSize="30px" android:clickable="true" android:maxWidth="200px" android:textColor="@color/eleblack"></TextView></LinearLayout>
                <LinearLayout android:id="@+id/linearLayout2" android:layout_margin="5px" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingLeft="50px">
                    <TextView android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:id="@+id/tilbudText" android:layout_width="wrap_content" android:layout_marginRight="50px" android:text="@string/tilbudText" android:textSize="40px"></TextView>
                    <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/prevButton" android:layout_gravity="center_vertical" android:src="@drawable/iconarrow2" android:background="@color/green"></ImageButton>
        
                    <ImageButton android:id="@+id/tilbudImage" android:layout_margin="10px" android:clickable="true" android:src="@drawable/tilbud1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:maxHeight="300px"></ImageButton>
                    <ImageButton android:src="@drawable/iconarrow1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/nextButton" android:layout_gravity="center_vertical" android:maxHeight="30px" android:maxWidth="30px" android:background="@color/green"></ImageButton>
                </LinearLayout>
            </TableRow>
            <TableRow android:id="@+id/tableRow2" android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_gravity="center_vertical|center|center_horizontal" android:layout_marginTop="20px">
                <LinearLayout android:id="@+id/linearLayout3" android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_margin="5px">
                    <TextView android:textSize="40px" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:layout_marginRight="50px" android:layout_width="wrap_content" android:id="@+id/placesText" android:text="@string/placesText" android:layout_margin="5px"></TextView>
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/mapImage" android:src="@drawable/map1" android:layout_marginRight="100px"></ImageView>
                    <LinearLayout android:id="@+id/linearLayout5" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5px">
                        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/imageView1" android:src="@drawable/iconfakta" android:padding="5px"></ImageView>
                        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/imageView2" android:src="@drawable/iconfotex" android:padding="5px"></ImageView>
                         <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/imageView3" android:src="@drawable/iconnetto" android:padding="5px"></ImageView>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearLayout4" android:orientation="vertical" android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_margin="5px" android:paddingLeft="50px">
                    <TextView android:textSize="40px" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:layout_marginRight="50px" android:layout_width="wrap_content" android:id="@+id/rutinerText" android:text="@string/rutinerText" android:layout_margin="5px"></TextView>
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10px" android:clickable="true" android:maxHeight="300px" android:id="@+id/rutinerImage" android:src="@drawable/rutines1"></ImageView>
                </LinearLayout>
            </TableRow>
        </TableLayout>
    
